<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
      <!--  <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home_deactive"
            android:title="@string/home" />-->
        <item
            android:id="@+id/navigation_prescription_list"
            android:icon="@drawable/ic_my_order"
            android:title="@string/prescription_list" />
     <!--   <item
            android:id="@+id/nav_coins_help"
            android:icon="@drawable/ic_help_black_24dp"
            android:title="@string/label_help" />

        <item
            android:id="@+id/nav_rate_us"
            android:icon="@drawable/ic_rate_us"
            android:title="@string/label_rate_us" />-->

        <item
            android:id="@+id/nav_about_us"
            android:icon="@drawable/ic_about_us"
            android:title="@string/label_about_us" />
        <item
            android:id="@+id/nav_share"
            android:icon="@drawable/ic_share_black_24dp"
            android:title="@string/label_share" />
           <item
            android:id="@+id/nav_notification"
            android:icon="@drawable/ic_notifications_black_24dp"
            android:title="@string/notification" />

        <item
            android:id="@+id/nav_coins_tearms_and_condition"
            android:icon="@drawable/ic_t_and_c"
            android:title="@string/label_tearms_and_condition" />
        <item
            android:id="@+id/nav_call_us"
            android:icon="@drawable/ic_call_black_24dp"
            android:title="@string/label_call_us" />
       <!-- <item
            android:id="@+id/nav_label_change_password"
            android:icon="@drawable/ic_lock"
            android:title="@string/label_change_password" />
-->


        <item
            android:id="@+id/nav_logout"
            android:icon="@drawable/ic_nav_logout"
            android:title="@string/label_logout" />

    </group>



</menu>