<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >


        <android.support.v4.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@+id/head">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <LinearLayout
                    android:id="@+id/linear_main"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/margin_15"
                    android:layout_marginRight="@dimen/margin_15"
                    android:layout_marginTop="@dimen/margin_5"
                    android:orientation="vertical">

                    <android.support.design.widget.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="@dimen/margin_5">

                        <EditText
                            android:id="@+id/fname" android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:backgroundTint="@color/text_color"
                            android:hint="@string/name"
                            android:imeOptions="actionNext"
                            android:inputType="textEmailAddress"
                            android:textColorHint="@color/text_color"
                            android:textSize="@dimen/default_text_size_medium_extra" />

                    </android.support.design.widget.TextInputLayout>


                    <android.support.design.widget.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="@dimen/margin_5">

                        <EditText
                            android:id="@+id/email"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:backgroundTint="@color/text_color"
                            android:hint="@string/e_mail_address"
                            android:imeOptions="actionNext"
                            android:inputType="textEmailAddress"
                            android:textColorHint="@color/text_color"
                            android:editable="false"
                            android:focusable="false" android:textSize="@dimen/default_text_size_medium_extra" />

                    </android.support.design.widget.TextInputLayout>


                    <android.support.design.widget.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="@dimen/margin_5">

                        <EditText                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:backgroundTint="@color/text_color"
                            android:hint="@string/contact_number"
                            android:imeOptions="actionNext"
                            android:inputType="phone"
                            android:id="@+id/mobile"

                            android:textColorHint="@color/text_color"
                            android:textSize="@dimen/default_text_size_medium_extra" />

                    </android.support.design.widget.TextInputLayout>

                    <android.support.design.widget.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="@dimen/margin_5">

                        <EditText                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:backgroundTint="@color/text_color"
                            android:hint="@string/label_my_addresses"
                            android:imeOptions="actionNext"
                            android:id="@+id/address"

                            android:textColorHint="@color/text_color"
                            android:textSize="@dimen/default_text_size_medium_extra" />

                    </android.support.design.widget.TextInputLayout>

                    <android.support.design.widget.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="@dimen/margin_5">

                        <EditText                             android:id="@+id/ads_line2"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:visibility="gone" android:backgroundTint="@color/text_color"
                            android:hint="@string/label_addresses"
                            android:imeOptions="actionNext"
                            android:textColorHint="@color/text_color"
                            android:textSize="@dimen/default_text_size_medium_extra" />

                    </android.support.design.widget.TextInputLayout>

                    <Button
                        android:id="@+id/change_password"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="@dimen/margin_5"
                        android:layout_marginLeft="@dimen/margin_20"
                        android:layout_marginRight="@dimen/margin_20"
                        android:layout_marginTop="@dimen/margin_5"
                        android:background="@drawable/button_shape_blue"
                        android:text="@string/label_change_password"
                        android:textColor="@color/white"
                        />

                    <Button
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="@dimen/margin_5"
                        android:layout_marginLeft="@dimen/margin_20"
                        android:layout_marginRight="@dimen/margin_20"
                        android:layout_marginTop="@dimen/margin_5"
                        android:id="@+id/btn_update" android:background="@drawable/button_shape_yellow"
                        android:text="@string/signup"
                        android:textColor="@color/white" />






                </LinearLayout>


            </LinearLayout>
        </android.support.v4.widget.NestedScrollView>


    </RelativeLayout>

</layout>
